--- a/m/busi/mchnt-elec-info.html
+++ b/m/busi/mchnt-elec-info.html
@@ -148,6 +148,7 @@
 	function elec_info(type, page) {
 		weui.page.show('#' + page);
 		current_elec_type = type;
+		alert(type + ',' + page);
 		if(type == '1') searchPage.search();
 		else if(type == '2') searchBusi.search();
 	}
