--- a/m/busi/mchnt-param.html
+++ b/m/busi/mchnt-param.html
@@ -110,19 +110,19 @@
                 </div>
                 <div class="weui-cell">
                     <div class="weui-cell__hd">
+                        <label class="weui-label">银行账号<span class="required">*</span></label>
+                    </div>
+                    <div class="weui-cell__bd">
+                        <input class="weui-input" type="text" name="account_no" required="" placeholder="请输入银行账号" style="font-weight:bold; font-size:20px; color: red;">
+                    </div>
+                </div>
+                <div class="weui-cell">
+                    <div class="weui-cell__hd">
                         <label class="weui-label">开户支行<span class="required">*</span></label>
                     </div>
                     <div class="weui-cell__bd">
                         <input class="weui-input" type="text" required="" name="account_bank_branch_nm" placeholder="请选择开户支行" id="account-bank-branch-select2">
                         <input type="hidden" name="account_bank_branch_cd">
-                    </div>
-                </div>
-                <div class="weui-cell">
-                    <div class="weui-cell__hd">
-                        <label class="weui-label">银行账号<span class="required">*</span></label>
-                    </div>
-                    <div class="weui-cell__bd">
-                        <input class="weui-input" type="text" name="account_no" required="" placeholder="请输入银行账号" style="font-weight:bold; font-size:20px; color: red;">
                     </div>
                 </div>
                 <div class="weui-cell weui-cell_select weui-cell_select-after hide">
@@ -634,6 +634,7 @@
         $('#account-bank-branch-select2').on('focus', function() {
             $$.showSelect2(this, {
                 title: '搜索开户支行',
+				queryParams: {account_no: $('input[name="account_no"]').val()},
                 valueField: 'bank_branch_cd',
                 textField: 'bank_branch_nm',
                 url: '/action/bm/bank-branch/search'
