--- a/m/busi/quick-enter-info.html
+++ b/m/busi/quick-enter-info.html
@@ -34,7 +34,7 @@
         </div>
     </div>
     
-    <div id="page2" class="page">
+    <div id="page2" class="page page_show">
         <div class="weui-search-bar hide">
             <a href="javascript:" class="search-bar__btn" onclick="back()">返回</a>
             <form class="weui-search-bar__form" method="post" action="">
@@ -55,9 +55,9 @@
         </div>
     </div>
     
-    <div id="detail-page" class="page_show">
+    <div id="detail-page" class="page">
         <form id="form">
-            <div class="weui-cells__title">商户基本信息<a onclick="save_data();" class="weui-btn weui-btn_mini weui-btn_primary" style="margin-left: 60px">暂存</a></div>
+            <div class="weui-cells__title">商户基本信息<a onclick="save_data();" class="weui-btn weui-btn_primary" style="width: 60px; height: 40px; margin-left: 160px;">暂存</a></div>
             <div class="weui-cells weui-cells_form">
                 <div class="weui-cell weui-cell_select weui-cell_select-after">
                     <div class="weui-cell__hd">
