--- a/m/busi/quick-enter-info.html
+++ b/m/busi/quick-enter-info.html
@@ -57,7 +57,7 @@
     
     <div id="detail-page" class="page">
         <form id="form">
-            <div class="weui-cells__title">商户基本信息<a onclick="save_data();" class="weui-btn weui-btn_primary" style="width: 60px; height: 40px; margin-left: 160px;">暂存</a></div>
+            <div class="weui-cells__title">商户基本信息<a onclick="save_data();" class="weui-btn weui-btn_mini weui-btn_primary" style="margin-left: 160px;">暂存</a></div>
             <div class="weui-cells weui-cells_form">
                 <div class="weui-cell weui-cell_select weui-cell_select-after">
                     <div class="weui-cell__hd">
