--- a/m/busi/quick-enter-info.html
+++ b/m/busi/quick-enter-info.html
@@ -259,7 +259,7 @@
                 </div>
             </div>
             <div class="weui-btn-area btn-area">
-                <a id="back-btn" href="javascript:" class="weui-btn weui-btn_default" onclick="weui.page.show('#page2');">返回</a>
+                <a id="back-btn" href="javascript:" class="weui-btn weui-btn_default" onclick="weui.page.back();">返回</a>
                 <a id="submit-btn" href="javascript:" class="weui-btn weui-btn_primary">下一步</a>
             </div>
         </form>
