--- a/m/busi/quick-enter-info.html
+++ b/m/busi/quick-enter-info.html
@@ -188,7 +188,7 @@
                         <label class="weui-label">手续费</label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input busi" name="fee" type="number" pattern="^\d+\.?\d*$" placeholder="开通当面付即填" invalidTips="请输入正确的手续费">
+                        <input class="weui-input busi" name="fee" type="number" pattern="^\d+\.?\d*$" placeholder="扫码手续费" invalidTips="请输入正确的手续费">
                     </div>
                     <div class="weui-cell__ft">
                         <button class="weui-vcode-btn">‰</button>
@@ -354,7 +354,7 @@
     }
 
 	function save_data() {
-		var param = serializeForm('#form');
+		var param = $('#form').serializeObject();
 		$$.setData('save_base', $.extend({}, query, param));
 		weui.alert('保存成功!', {title: '提示'});
 	}
