--- a/admin/pages/userinfo.html
+++ b/admin/pages/userinfo.html
@@ -168,10 +168,10 @@
                             <label>所在地区：</label>
                         </td>
                         <td class="td30 clear-readonly"><span>
-                        <input type="text" id="province" name="province" class="easyui-combobox" data-options="editable:false,required:true,data:provinceData,onChange:onChangeProvince" style="width:80px;">
-                        <input type="text" id="city" name="city" class="easyui-combobox" data-options="editable:false,required:true,data:cityData,onChange:onChangeCity" style="width:80px;">
-                        <input type="text" id="district" name="district" class="easyui-combobox" data-options="editable:false,required:true" style="width:80px;">
-                        <span class="required">*</span>
+                        <input type="text" id="province" name="province" class="easyui-combobox" data-options="editable:false,data:provinceData,onChange:onChangeProvince" style="width:80px;">
+                        <input type="text" id="city" name="city" class="easyui-combobox" data-options="editable:false,data:cityData,onChange:onChangeCity" style="width:80px;">
+                        <input type="text" id="district" name="district" class="easyui-combobox" data-options="editable:false" style="width:80px;">
+                         
                       </span></td>
                     </tr>
                     <tr>
