--- a/m/register.html
+++ b/m/register.html
@@ -28,6 +28,14 @@
                     <input class="weui-input" type="tel" required="" pattern="^\d{11}$" placeholder="请输入手机号" notMatchTips="请输入有效的手机号" name="mobile">
                 </div>
             </div>
+            <div class="weui-cell" id="mobile-cell">
+                <div class="weui-cell__hd">
+                    <label class="weui-label">姓名</label>
+                </div>
+                <div class="weui-cell__bd">
+                    <input class="weui-input" type="text" required="" placeholder="请填写姓名" notMatchTips="请填写姓名" name="nickname">
+                </div>
+            </div>
             <div class="weui-cell weui-cell_vcode" id="vcode-cell">
                 <div class="weui-cell__hd">
                     <label class="weui-label">验证码</label>
