--- a/m/my.html
+++ b/m/my.html
@@ -68,14 +68,14 @@
                         <p>我的客户</p>
                     </div>
                 </a>
-                <a href="my/friend.html" class="weui-grid">
+                <!--a href="my/friend.html" class="weui-grid">
                     <div class="weui-grid__icon">
                         <i class="icon-friend"></i>
                     </div>
                     <div class="weui-grid__label">
                         <p>我的好友</p>
                     </div>
-                </a>
+                </a-->
                 <a href="my/setting.html" class="weui-grid">
                     <div class="weui-grid__icon">
                         <i class="icon-setting"></i>
