--- a/m/my/income-history-merchant.html
+++ b/m/my/income-history-merchant.html
@@ -47,11 +47,14 @@
     var query = $$.parseQueryString();
 
     var incomeTypeData = [{
-        value: 'FR',
-        text: '分润收益'
+        value: 'WH',
+        text: '维护收益'
     }, {
         value: 'TZ',
         text: '拓展收益'
+    }, {
+        value: 'TJ',
+        text: '推荐收益'
     }];
 	
 	$.template.helper('formatMonth', function(month) {
