--- a/m/my/income-merchant-tp.html
+++ b/m/my/income-merchant-tp.html
@@ -59,8 +59,12 @@
                     <span class="weui-form-preview__value">¥{{row.amount}}</span>
                 </div>
                 <div class="weui-form-preview__item">
-                    <label class="weui-form-preview__label">通联收益</label>
-                    <span class="weui-form-preview__value">¥{{row.tl_income}}</span>
+                    <label class="weui-form-preview__label">记账收益</label>
+                    <span class="weui-form-preview__value">¥{{row.we_income}}</span>
+                </div>
+				<div class="weui-form-preview__item">
+                    <label class="weui-form-preview__label">计费算法</label>
+                    <span class="weui-form-preview__value">{{row.fee_nm}}</span>
                 </div>
             </div>
         </div>
@@ -88,11 +92,14 @@
     var query = $$.parseQueryString();
 
     var incomeTypeData = [{
-        value: 'FR',
-        text: '分润收益'
+        value: 'WH',
+        text: '维护收益'
     }, {
         value: 'TZ',
         text: '拓展收益'
+    }, {
+        value: 'TJ',
+        text: '推荐收益'
     }];
 
     $.template.helper('formatDate', function(d) {
@@ -113,7 +120,7 @@
 
     function searchIncome(param, success, error) {
 		var queryParams = $.extend(query, param);
-        $$.request(getUrl(), queryParams, {
+        $$.request('/action/bm/merchant/allot-income-history', queryParams, {
             success: function(data) {
                 if (data.errcode == 0) {
                     success(data.rows);
@@ -128,7 +135,7 @@
     }
 
 	var searchMerchantIncomeType = weui.searchPage('#income-list', {
-		resultTpl: getTemplate(),
+		resultTpl: '#allot-income-templ',
 		loader: searchIncome,
 		onInput: function() {
 			console.log(this, arguments);
