--- a/m/my.html
+++ b/m/my.html
@@ -28,7 +28,7 @@
                 </a>
             </div-->
             <a href="javascript:;" class="weui-panel__hd weui-cell_access" onclick="weui.page.show('#nickname-page')"><span>昵称：</span><span id="nickname">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></a>
-            <div class="weui-panel__bd">
+            <div class="weui-panel__bd" style="background-color:darkorange">
                 <div class="weui-media-box weui-media-box_text" >
                     <h6 class="weui-media-box__title" align="center" id="yesterday_income">暂无收益</h6>
                     <p class="weui-media-box__desc" align="center">昨日收益</p>
