--- a/m/my.html
+++ b/m/my.html
@@ -290,7 +290,7 @@
 			}
 							
         });
-		$('#withdraw_his').on('click', searchWithdrawList);
+		$('#withdraw_his').on('click', searchWithdrawList.search());
     });
     </script>
 </body>
