--- a/m/my.html
+++ b/m/my.html
@@ -288,7 +288,7 @@
 				onClickItem: function(row) {
 					console.log(this, arguments);
 				}
-			});
+			}).search();
 		});
     });
     </script>
