--- a/m/my.html
+++ b/m/my.html
@@ -248,7 +248,19 @@
             }
         });
     }
-		
+	
+	function searchWithdraw() {
+		weui.searchPage('#withdraw-list', {
+			resultTpl: '#withdraw-his-templ',
+			loader: searchWithdraw,
+			onInput: function() {
+				console.log(this, arguments);
+			},
+			onClickItem: function(row) {
+				console.log(this, arguments);
+			}
+		});
+	}
     var curent_user;
     $(function() {
 		$('#nickname-submit-btn').on('click', onNicknameSubmit);
@@ -279,16 +291,7 @@
 							
         });
 		$('#withdraw_his').on('click', function(){
-			weui.searchPage('#withdraw-list', {
-				resultTpl: '#withdraw-his-templ',
-				loader: searchWithdraw,
-				onInput: function() {
-					console.log(this, arguments);
-				},
-				onClickItem: function(row) {
-					console.log(this, arguments);
-				}
-			}).search();
+			searchWithdraw.search();
 		});
     });
     </script>
