--- a/m/my.html
+++ b/m/my.html
@@ -249,7 +249,7 @@
         });
     }
 	
-	function searchWithdraw() {
+	var searchWithdraw = function() {
 		weui.searchPage('#withdraw-list', {
 			resultTpl: '#withdraw-his-templ',
 			loader: searchWithdraw,
